--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "crawler": "^1.1.2",
+    "iconv": "^2.3.0",
     "json2csv": "^3.11.5",
     "needle": "^2.1.1",
     "random-useragent": "^0.3.1",
