--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "needle": "^2.1.1",
     "random-useragent": "^0.3.1",
     "tress": "^1.0.5"
+  },
+  "pkg": {
+    "scripts": "main.js"
   }
 }
